; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_rdp.c_rdp_reconnect.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_rdp.c_rdp_reconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@False = common dso_local global i32 0, align 4
@True = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rdp_reconnect(i32* %0, i8* %1, i32 %2, i32* %3, i32* %4, i32* %5, i32* %6, i32* %7, i32* %8, i8* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i8*, align 8
  store i32* %0, i32** %12, align 8
  store i8* %1, i8** %13, align 8
  store i32 %2, i32* %14, align 4
  store i32* %3, i32** %15, align 8
  store i32* %4, i32** %16, align 8
  store i32* %5, i32** %17, align 8
  store i32* %6, i32** %18, align 8
  store i32* %7, i32** %19, align 8
  store i32* %8, i32** %20, align 8
  store i8* %9, i8** %21, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = load i8*, i8** %13, align 8
  %24 = load i32*, i32** %20, align 8
  %25 = load i8*, i8** %21, align 8
  %26 = call i32 @sec_reconnect(i32* %22, i8* %23, i32* %24, i8* %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %30, label %28

28:                                               ; preds = %10
  %29 = load i32, i32* @False, align 4
  store i32 %29, i32* %11, align 4
  br label %40

30:                                               ; preds = %10
  %31 = load i32*, i32** %12, align 8
  %32 = load i32, i32* %14, align 4
  %33 = load i32*, i32** %16, align 8
  %34 = load i32*, i32** %15, align 8
  %35 = load i32*, i32** %17, align 8
  %36 = load i32*, i32** %18, align 8
  %37 = load i32*, i32** %19, align 8
  %38 = call i32 @rdp_send_logon_info(i32* %31, i32 %32, i32* %33, i32* %34, i32* %35, i32* %36, i32* %37)
  %39 = load i32, i32* @True, align 4
  store i32 %39, i32* %11, align 4
  br label %40

40:                                               ; preds = %30, %28
  %41 = load i32, i32* %11, align 4
  ret i32 %41
}

declare dso_local i32 @sec_reconnect(i32*, i8*, i32*, i8*) #1

declare dso_local i32 @rdp_send_logon_info(i32*, i32, i32*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
